restore-point: before large changes

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ FTP_PASSWORD=3yh3rizc@A
 # Se for a raiz do domínio, use /public_html/
 # Se for um subdomínio, use /public_html/nome_da_pasta/
 FTP_REMOTE_ROOT=/public_html/
+
+# VIDEO INTEGRATION KEYS
+VITE_GOOGLE_CLIENT_ID=
+VITE_CLOUDINARY_CLOUD_NAME=
+VITE_CLOUDINARY_UPLOAD_PRESET=
