--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lagoa-formosa-no-momento-alpha-1.099-060120260930",
   "private": true,
-  "version": "0.1.4",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -26,6 +26,7 @@
     "@capacitor/preferences": "^8.0.0",
     "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
+    "@react-oauth/google": "^0.13.4",
     "@supabase/supabase-js": "^2.39.0",
     "@types/uuid": "^10.0.0",
     "@vimeo/player": "^2.30.1",
