--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ FTP_PASSWORD=3yh3rizc@A
 FTP_REMOTE_ROOT=/public_html/
 
 # VIDEO INTEGRATION KEYS
-VITE_GOOGLE_CLIENT_ID=
+VITE_GOOGLE_CLIENT_ID=324842099434-i6b3f6ppr4pp89r740cu5pcjk08pnc4b.apps.googleusercontent.com
 VITE_CLOUDINARY_CLOUD_NAME=
 VITE_CLOUDINARY_UPLOAD_PRESET=
