--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lagoa-formosa-no-momento-alpha-1.099-060120260930",
+  "name": "lfnm-v1-099",
   "private": true,
-  "version": "0.0.0-236",
+  "version": "0.0.1-01",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -34,19 +34,23 @@
     "vite": "^7.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
     "depcheck": "^1.4.7",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "ftp-deploy": "^2.4.7",
     "jscpd": "^4.0.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^5.4.10"
   }
 }
